<resources>
    <string name="app_name">FitTracker</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="popular_workouts">Popular Workouts</string>
    <string name="Programs">Programs</string>
    <string name="ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="front_shred">TODO</string>
    <string name="front_cardio">TODO</string>
    <string name="C_pop">TODO</string>
    <string name="shred_pop">TODO</string>
    <string name="bulk_pop" />
    <string name="cali_pop" />
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Menu">Menu</string>


    <string name="home_second">Home Second</string>
    <string name="calisthenics">Calisthenics</string>
    <string name="programs">Programs</string>
    <string name="cardio">Cardio</string>
    <string name="shredding">Shredding</string>
    <string name="bulking">Bulking</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
